# reso5

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/resolution_week4_flameX/: main.py
src/resolution_week5_flameX/: main.py
src/resolution_week5_flameX/static/: app.py  index.html
